--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -9,8 +9,8 @@
 
 .header {
    width      : 100%;
-   height     : 80px;
-   line-height: 80px;
+   height     : 70px;
+   line-height: 70px;
    background-color:rgba(52, 58, 64, 0);
    backdrop-filter: blur(8px);
 }
@@ -40,6 +40,7 @@
 
 .nav__item a.active__link {
    color:greenyellow;
+   -webkit-text-stroke:0.2px black;
 }
 
 .mobile__menu {
@@ -50,9 +51,9 @@
 
 .sticky__header {
    width      : 100%;
-   height     : 80px;
-   line-height: 80px;
-   background-color: rgba(54, 54, 66, 0.9);
+   height     : 70px;
+   line-height: 70px;
+   background-color: rgba(252, 252, 252, 0.9);
    position   : sticky;
    top        : 0;
    left       : 0;
