Fix :Resolved the Home page and Tour page Validations of alert messages (#28)

--- a/frontend/src/shared/search-bar.css
+++ b/frontend/src/shared/search-bar.css
@@ -73,3 +73,15 @@
       font-size: 1rem;
    }
 }
+
+.input-error {
+   border: 1px solid white;
+}
+
+/* .text-danger {
+   font-size: 0.75rem;
+   color: white;
+   margin-top: 4px;
+} */
+
+
